crates/jsonschema-codegen/src/snapshots/jsonschema_codegen__tests__snapshot_tests__additional_schema.snap
---
source: crates/jsonschema-codegen/src/tests.rs
description: "{\"additionalProperties\":{\"type\":\"string\"},\"properties\":{\"a\":{}}}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Object(obj) => {
                obj.iter()
                    .all(|(key, instance)| {
                        let key_str = key.as_str();
                        match key_str {
                            "a" => true,
                            _ => instance.is_string(),
                        }
                    })
            }
            _ => true,
        }
