crates/jsonschema-codegen/src/snapshots/jsonschema_codegen__tests__snapshot_tests__const_str.snap
---
source: crates/jsonschema-codegen/src/tests.rs
description: "{\"const\":\"hello\"}"
expression: is_valid_body(schema)
---
instance.as_str() == Some("hello")
