crates/jsonschema-codegen/src/snapshots/jsonschema_codegen__tests__snapshot_tests__const_str_with_type.snap
---
source: crates/jsonschema-codegen/src/tests.rs
description: "{\"const\":\"hello\",\"type\":\"string\"}"
expression: is_valid_body(schema)
---
instance.as_str() == Some("hello")
