crates/jsonschema-codegen/src/snapshots/jsonschema_codegen__tests__snapshot_tests__enum_integer_not_redundant.snap
---
source: crates/jsonschema-codegen/src/tests.rs
assertion_line: 184
description: "{\"enum\":[1.5],\"type\":\"integer\"}"
expression: is_valid_body(schema)
---
(match instance {
            serde_json::Value::Number(n) => jsonschema::__private::types::is_integer(n),
            _ => false,
        })
            && (match instance {
                serde_json::Value::Number(_) => {
                    static NUMBER_VARIANTS: std::sync::LazyLock<
                        Vec<serde_json::Value>,
                    > = std::sync::LazyLock::new(|| {
                        serde_json::from_str::<Vec<serde_json::Value>>("[1.5]")
                            .expect("Failed to parse number variants")
                    });
                    NUMBER_VARIANTS
                        .iter()
                        .any(|v| jsonschema::__private::cmp::equal(v, instance))
                }
                _ => false,
            })
