crates/jsonschema-codegen/src/snapshots/jsonschema_codegen__tests__snapshot_tests__enum_str.snap
---
source: crates/jsonschema-codegen/src/tests.rs
expression: schema_to_code(schema)
---
struct Validator;
#[doc(hidden)]
#[allow(non_snake_case, dead_code, unused_variables, clippy::all)]
mod __validator_impl {
    use super::*;
    pub(super) fn is_valid(instance: &serde_json::Value) -> bool {
        (match instance {
            serde_json::Value::String(s) => matches!(s.as_str(), "a" | "b" | "c"),
            _ => false,
        })
    }
}
impl Validator {
    pub fn is_valid(instance: &serde_json::Value) -> bool {
        __validator_impl::is_valid(instance)
    }
}
