crates/jsonschema-codegen/src/snapshots/jsonschema_codegen__tests__snapshot_tests__exclusive_maximum.snap
---
source: crates/jsonschema-codegen/src/tests.rs
description: "{\"exclusiveMaximum\":100,\"type\":\"number\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Number(n) => {
                jsonschema::__private::numeric::lt(n, 100u64 as u64)
            }
            _ => false,
        }
